test/domains/compilerErrors/contains-idxtype.chpl

config const n = 1000;

var dr1 = {1..n:int(32)};
var assoc : domain(int);

writeln(dr1.contains(assoc));
