test/domains/compilerErrors/contains-idxtype.good
contains-idxtype.chpl:7: error: incompatible idxType in 'domain.contains()': cannot convert from 'int(64)' to 'int(32)'
